name:                euler
version:             0.1.0.0
synopsis:            Euler Project Haskell Solutions
license:             MIT
license-file:        ../LICENSE
author:              Giovanni Caporaletti
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable euler
  main-is:             Euler.hs           
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.7 && < 4.8,time
  hs-source-dirs:      src 
  default-language:    Haskell2010
